--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2035,9 +2035,8 @@
                         </child>
                         <child>
                           <widget class="GtkLabel" id="label_video_experimental">
-                            <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">EXPERIMENTAL, Chronojump may crash.</property>
+                            <property name="label">EXPERIMENTAL, Chronojump may crash.</property>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -23543,11 +23542,9 @@ Evaluator can use real name or nickname.</property>
             <child>
               <widget class="GtkButton" id="button_reload">
                 <property name="label">gtk-refresh</property>
-                <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_button_reload_clicked"/>
               </widget>
               <packing>
                 <property name="expand">False</property>
