--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -5525,7 +5525,6 @@ suitable for agility tests)</property>
             <property name="spacing">10</property>
             <child>
               <widget class="GtkLabel" id="label205">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">This dialog explains which ports are suitable to be connected with Chronopic</property>
                 <property name="wrap">True</property>
               </widget>
@@ -5630,7 +5629,7 @@ suitable for agility tests)</property>
                             </child>
                             <child>
                               <widget class="GtkButton" id="button_force_port">
-                                <property name="label" translatable="yes">Force Chronopic port to COM1 or COM2</property>
+                                <property name="label" translatable="yes">Force Chronopic port to COM1 - COM4</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
