Final changes going to 0.9.3

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12405,7 +12405,7 @@ by you</property>
                         <child>
                           <widget class="GtkRadioButton" id="radio_contact_modular">
                             <property name="label" translatable="yes">Contact platform
-(modular circuit board)</property>
+(circuit board)</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
