--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -23222,6 +23222,7 @@ on current Chronojump version.</property>
                                                         <property name="can_default">True</property>
                                                         <property name="receives_default">True</property>
                                                         <property name="use_underline">True</property>
+                                                        <signal name="clicked" handler="on_button_encoder_recalculate_clicked"/>
                                                       </widget>
                                                       <packing>
                                                         <property name="expand">False</property>
