--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -23525,6 +23525,7 @@ on current Chronojump version.</property>
                                                             <widget class="GtkButton" id="button_encoder_analyze">
                                                             <property name="label" translatable="yes">Analyze</property>
                                                             <property name="visible">True</property>
+                                                            <property name="sensitive">False</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="can_default">True</property>
                                                             <property name="receives_default">True</property>
