--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13852,6 +13852,7 @@ by you</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="enable_search">False</property>
+                                            <property name="show_expanders">False</property>
                                             <signal name="button_release_event" handler="on_treeview_button_release_event"/>
                                           </widget>
                                         </child>
