--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -23674,44 +23674,103 @@ on current Chronojump version.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkHButtonBox" id="hbuttonbox9">
+                                          <widget class="GtkHBox" id="hbox73">
                                             <property name="visible">True</property>
-                                            <property name="layout_style">spread</property>
+                                            <property name="spacing">10</property>
                                             <child>
-                                              <widget class="GtkButton" id="button_encoder_capture">
-                                                <property name="label" translatable="yes">Capture from encoder</property>
+                                              <widget class="GtkHButtonBox" id="hbuttonbox9">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="can_default">True</property>
-                                                <property name="receives_default">True</property>
-                                                <property name="use_underline">True</property>
-                                                <signal name="clicked" handler="on_button_encoder_capture_clicked"/>
+                                                <property name="layout_style">spread</property>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_capture">
+                                                    <property name="label" translatable="yes">Capture from encoder</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_underline">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_capture_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_recalculate">
+                                                    <property name="label" translatable="yes">Recalculate</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_underline">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_recalculate_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkButton" id="button_encoder_recalculate">
-                                                <property name="label" translatable="yes">Recalculate</property>
+                                              <widget class="GtkProgressBar" id="encoder_pulsebar_capture">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="can_default">True</property>
-                                                <property name="receives_default">True</property>
-                                                <property name="use_underline">True</property>
-                                                <signal name="clicked" handler="on_button_encoder_recalculate_clicked"/>
+                                                <property name="activity_mode">True</property>
+                                                <property name="show_text">True</property>
+                                                <property name="pulse_step">0.10000000149</property>
                                               </widget>
                                               <packing>
-                                                <property name="expand">False</property>
                                                 <property name="fill">False</property>
                                                 <property name="position">1</property>
                                               </packing>
                                             </child>
+                                            <child>
+                                              <widget class="GtkHButtonBox" id="hbuttonbox10">
+                                                <property name="visible">True</property>
+                                                <property name="layout_style">spread</property>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_save">
+                                                    <property name="label">gtk-save</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_stock">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_save_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_load">
+                                                    <property name="label">gtk-open</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_stock">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_load_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                              </widget>
+                                              <packing>
+                                                <property name="position">2</property>
+                                              </packing>
+                                            </child>
                                           </widget>
                                           <packing>
-                                            <property name="expand">False</property>
                                             <property name="position">1</property>
                                           </packing>
                                         </child>
@@ -23992,31 +24051,6 @@ on current Chronojump version.</property>
                                                         <property name="position">2</property>
                                                       </packing>
                                                     </child>
-                                                    <child>
-                                                      <widget class="GtkHBox" id="hbox80">
-                                                        <property name="visible">True</property>
-                                                        <child>
-                                                          <widget class="GtkButton" id="button_encoder_analyze">
-                                                            <property name="label" translatable="yes">Analyze</property>
-                                                            <property name="visible">True</property>
-                                                            <property name="sensitive">False</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="can_default">True</property>
-                                                            <property name="receives_default">True</property>
-                                                            <property name="use_underline">True</property>
-                                                            <signal name="clicked" handler="on_button_encoder_analyze_clicked"/>
-                                                          </widget>
-                                                          <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="padding">12</property>
-                                                            <property name="position">0</property>
-                                                          </packing>
-                                                        </child>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="position">3</property>
-                                                      </packing>
-                                                    </child>
                                                   </widget>
                                                 </child>
                                               </widget>
@@ -24036,6 +24070,48 @@ on current Chronojump version.</property>
                                             <property name="expand">False</property>
                                             <property name="fill">False</property>
                                             <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkHBox" id="hbox75">
+                                            <property name="visible">True</property>
+                                            <property name="homogeneous">True</property>
+                                            <child>
+                                              <widget class="GtkButton" id="button_encoder_analyze">
+                                                <property name="label" translatable="yes">Analyze</property>
+                                                <property name="width_request">150</property>
+                                                <property name="visible">True</property>
+                                                <property name="sensitive">False</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="can_default">True</property>
+                                                <property name="receives_default">True</property>
+                                                <property name="use_underline">True</property>
+                                                <signal name="clicked" handler="on_button_encoder_analyze_clicked"/>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">False</property>
+                                                <property name="padding">12</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkProgressBar" id="encoder_pulsebar_analyze">
+                                                <property name="width_request">150</property>
+                                                <property name="visible">True</property>
+                                                <property name="activity_mode">True</property>
+                                                <property name="show_text">True</property>
+                                                <property name="pulse_step">0.10000000149</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">False</property>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="position">1</property>
                                           </packing>
                                         </child>
                                       </widget>
