--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -23786,6 +23786,7 @@ on current Chronojump version.</property>
                                                             <property name="receives_default">False</property>
                                                             <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
+                                                            <signal name="toggled" handler="on_radiobutton_encoder_eccon_toggled"/>
                                                           </widget>
                                                           <packing>
                                                             <property name="fill">False</property>
@@ -23800,6 +23801,7 @@ on current Chronojump version.</property>
                                                             <property name="receives_default">False</property>
                                                             <property name="draw_indicator">True</property>
                                                             <property name="group">radiobutton_encoder_concentric</property>
+                                                            <signal name="toggled" handler="on_radiobutton_encoder_eccon_toggled"/>
                                                           </widget>
                                                           <packing>
                                                             <property name="fill">False</property>
@@ -24373,12 +24375,68 @@ on current Chronojump version.</property>
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <widget class="GtkTable" id="table11">
+                                                      <widget class="GtkTable" id="table10">
                                                         <property name="visible">True</property>
                                                         <property name="n_rows">2</property>
                                                         <property name="n_columns">2</property>
                                                         <property name="column_spacing">12</property>
                                                         <property name="row_spacing">4</property>
+                                                        <child>
+                                                          <widget class="GtkLabel" id="label_encoder_analyze_eccon">
+                                                            <property name="visible">True</property>
+                                                            <property name="sensitive">False</property>
+                                                            <property name="xalign">0</property>
+                                                            <property name="label" translatable="yes">Ecc-conc phases</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="top_attach">1</property>
+                                                            <property name="bottom_attach">2</property>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkHBox" id="hbox_encoder_analyze_eccon">
+                                                            <property name="visible">True</property>
+                                                            <property name="sensitive">False</property>
+                                                            <property name="spacing">8</property>
+                                                            <child>
+                                                            <widget class="GtkRadioButton" id="radiobutton_encoder_eccon_together">
+                                                            <property name="label" translatable="yes">Together</property>
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">False</property>
+                                                            <property name="active">True</property>
+                                                            <property name="draw_indicator">True</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="fill">False</property>
+                                                            <property name="position">0</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <widget class="GtkRadioButton" id="radiobutton_encoder_eccon_separated">
+                                                            <property name="label" translatable="yes">Separated</property>
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">False</property>
+                                                            <property name="draw_indicator">True</property>
+                                                            <property name="group">radiobutton_encoder_eccon_together</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">1</property>
+                                                            </packing>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="left_attach">1</property>
+                                                            <property name="right_attach">2</property>
+                                                            <property name="top_attach">1</property>
+                                                            <property name="bottom_attach">2</property>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                          </packing>
+                                                        </child>
                                                         <child>
                                                           <widget class="GtkLabel" id="label_encoder_analyze_curve_num">
                                                             <property name="visible">True</property>
@@ -24386,13 +24444,12 @@ on current Chronojump version.</property>
                                                             <property name="xalign">0</property>
                                                             <property name="label" translatable="yes">Curve number</property>
                                                           </widget>
-                                                          <packing>
-                                                            <property name="top_attach">1</property>
-                                                            <property name="bottom_attach">2</property>
-                                                          </packing>
                                                         </child>
                                                         <child>
-                                                          <widget class="GtkSpinButton" id="spin_encoder_analyze_curve_num">
+                                                          <widget class="GtkHBox" id="hbox74">
+                                                            <property name="visible">True</property>
+                                                            <child>
+                                                            <widget class="GtkSpinButton" id="spin_encoder_analyze_curve_num">
                                                             <property name="visible">True</property>
                                                             <property name="sensitive">False</property>
                                                             <property name="can_focus">True</property>
@@ -24401,20 +24458,17 @@ on current Chronojump version.</property>
                                                             <property name="climb_rate">1</property>
                                                             <property name="snap_to_ticks">True</property>
                                                             <property name="numeric">True</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                            </packing>
+                                                            </child>
                                                           </widget>
                                                           <packing>
                                                             <property name="left_attach">1</property>
                                                             <property name="right_attach">2</property>
-                                                            <property name="top_attach">1</property>
-                                                            <property name="bottom_attach">2</property>
-                                                            <property name="x_options"></property>
                                                           </packing>
-                                                        </child>
-                                                        <child>
-                                                          <placeholder/>
-                                                        </child>
-                                                        <child>
-                                                          <placeholder/>
                                                         </child>
                                                       </widget>
                                                       <packing>
