--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -24544,6 +24544,7 @@ Evaluator can use real name or nickname.</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="rules_hint">True</property>
                                                     <property name="enable_search">False</property>
+                                                    <property name="show_expanders">False</property>
                                                   </widget>
                                                 </child>
                                               </widget>
